# multiple-entry-vite-experiment

./: .gitignore  README.md  package.json  pyproject.toml  server.py  vite.config.js
src/DoorOne/: DoorOne.jsx  DoorOne.scss  entry.jsx  index.html
src/DoorThree/: DoorThree.jsx  DoorThree.scss  entry.jsx  index.html
src/DoorTwo/: DoorTwo.jsx  DoorTwo.scss  entry.jsx  index.html
static/: door_one.css  door_one.js  door_three.css  door_three.js  door_two.css  door_two.js
static/DoorOne/: index.html
static/DoorThree/: index.html
static/DoorTwo/: index.html
static/assets/: react-dom-7c4a2174.js
templates/: door-one.html  door-three.html  door-two.html
